[WIP]
* add support for getting error data (requires update of play_game script!)
* show: support for custom leaderboard, new leaderboard config option defines columns to show
* fix: psyleague show --active
[0.1.1]
* bugfixes: psyleague config, psyleague bot update -d, installation, linux support
[0.1.0] 
* initial version